k8s/deployment-celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zzk-celery
  namespace: zzk-register
  labels:
    app: zzk-celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zzk-celery
  template:
    metadata:
      labels:
        app: zzk-celery
    spec:
      containers:
        - name: celery
          # CI workflow pins this tag on every push to main
          image: ghcr.io/nulp-ai-enterprise/zzk-rep-back:sha-591312d
          command:
            - celery
            - -A
            - app.tasks.celery_tasks
            - worker
            - --loglevel=info
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          terminationMessagePolicy: FallbackToLogsOnError

      imagePullSecrets:
        - name: ghcr-pull-secret

      restartPolicy: Always
