k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zzk-register
  namespace: zzk-register
  labels:
    app: zzk-register
spec:
  type: ClusterIP
  selector:
    app: zzk-register
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
